--- a/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
@@ -6,8 +6,8 @@
 ?>
 
 
-	<!--Breadcrumbs Data by Mageplaza SEO-->
-<?php if ($crumbs): ?>
+<?php if ($crumbs = $block->getBreadcrumbLinks()) : ?>
+<!--Breadcrumbs Data by Mageplaza SEO-->
 	<script type="application/ld+json">
 {
   "@context": "http://schema.org",
