--- a/view/frontend/layout/cms_index_noroute.xml
+++ b/view/frontend/layout/cms_index_noroute.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <head>
-        <meta></meta>
-    </head>
+    <referenceBlock name="head.additional">
+        <block class="Mageplaza\Seo\Block\Page\Head\Search\Catalog" name="mageplaza_seo_nofollow"
+               ifconfig="seo/general/nofollow_sr">
+        </block>
+    </referenceBlock>
 </page>
