--- a/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/breadcrumb.phtml
@@ -2,12 +2,12 @@
 /**
  * Learn more https://developers.google.com/structured-data/breadcrumbs#examples
  * base template: app/design/frontend/base/default/template/page/html/breadcrumbs.phtml
+ * @var \Mageplaza\Seo\Block\Widget\Breadcrumbs $block
  */
 ?>
 
-
-<?php if ($crumbs = $block->getBreadcrumbLinks()) : ?>
-<!--Breadcrumbs Data by Mageplaza SEO-->
+<?php if ($crumbs && is_array($crumbs)) : ?>
+	<!--Breadcrumbs Data by Mageplaza SEO-->
 	<script type="application/ld+json">
 {
   "@context": "http://schema.org",
