Add Field Business Description to admin config

--- a/view/frontend/templates/opengraph/homepage.phtml
+++ b/view/frontend/templates/opengraph/homepage.phtml
@@ -1,3 +1,6 @@
+<?php
+/** @var \Mageplaza\Seo\Block\Page\Head\Page $block */
+?>
 <?php if ($block->getHelper()->getSocialShares('opengraph')): ?>
 	<!--Open Graph Protocol for Facebook by Mageplaza_SEO-->
 	<meta property="og:title" content="<?php echo $block->escapeHtml($block->getStoreName()); ?>"/>
