--- a/view/frontend/templates/richsnippets/jsonld/product.phtml
+++ b/view/frontend/templates/richsnippets/jsonld/product.phtml
@@ -4,16 +4,15 @@
  */
 /** @var \Mageplaza\Seo\Block\Richsnippets\Product $block */
 ?>
-
 <?php if ($block->getProduct() && $block->getRichsnippetsHelper('enable_product') OR 1): ?>
 	<?php $product = $block->getProduct(); ?>
-<!-- Product Structured Data by Mageplaza SEO-->
+	<!-- Product Structured Data by Mageplaza SEO-->
 	<script type="application/ld+json">
 {
   "@context": "http://schema.org/",
   "@type": "Product",
   "name": "<?php echo $product->getName(); ?>",
-  "image": "<?php echo $block->getUrl('pub/media/catalog').'product'.$product->getImage() ?>",
+  "image": "<?php echo $block->getUrl('pub/media/catalog') . 'product' . $product->getImage() ?>",
   "description": "<?php echo trim(strip_tags($product->getShortDescription())); ?>",
   <?php if ($product->getMpn()): ?>
   "mpn": "<?php echo $product->getMpn(); ?>",
@@ -35,15 +34,14 @@
   }
   <?php endif; ?>
 
-  <?php if ($product->getSpecialPrice() AND $product->getPrice() != $product->getSpecialPrice()): ?>
   ,
   "offers": {
     "@type": "Offer",
     "priceCurrency": "<?php echo $block->getCurrency(); ?>",
-    "price": "<?php echo $product->getSpecialPrice(); ?>",
+    "price": "<?php echo $product->getPrice(); ?>",
     "priceValidUntil": "<?php echo $product->getSpecialToDate(); ?>",
-    "availability": "http://schema.org/InStock",
-    <?php endif; ?>
+    "itemOffered": "<?php echo $block->getQty($product->getId())?>",
+    "availability": "http://schema.org/<?php echo ($block->isInStock($product->getId()) ? 'InStock' : 'OutOfStock') ?>"
   }
 }
 
