--- a/view/adminhtml/templates/seocheck.phtml
+++ b/view/adminhtml/templates/seocheck.phtml
@@ -1,3 +1,25 @@
+<?php
+/**
+ * Mageplaza
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the mageplaza.com license that is
+ * available through the world-wide-web at this URL:
+ * https://mageplaza.com/LICENSE.txt
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade this extension to newer
+ * version in the future.
+ *
+ * @category    Mageplaza
+ * @package     Mageplaza_Seo
+ * @copyright   Copyright (c) 2018 Mageplaza (https://www.mageplaza.com/)
+ * @license     http://mageplaza.com/LICENSE.txt
+ */
+?>
+
 <button id="seo-check" title="Seo Check" type="button" class="action- scalable action-secondary save" style="display:none;">
     <span><?php echo __('Check On-page'); ?></span>
 </button>
@@ -9,7 +31,6 @@
         'jquery'
     ], function ($) {
         $(window).ajaxStart(function () {
-
             $('.page-actions-buttons').append($('.page-main-actions > #seo-check'));
             var seochek = $('#seo-check');
             seochek.show();
