--- a/view/adminhtml/layout/cms_page_edit.xml
+++ b/view/adminhtml/layout/cms_page_edit.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0"?>
 <!--
 /**
- * Copyright © Magento, Inc. All rights reserved.
- * See COPYING.txt for license details.
+ * Mageplaza
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the mageplaza.com license that is
+ * available through the world-wide-web at this URL:
+ * https://mageplaza.com/LICENSE.txt
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade this extension to newer
+ * version in the future.
+ *
+ * @category    Mageplaza
+ * @package     Mageplaza_Seo
+ * @copyright   Copyright (c) 2018 Mageplaza (https://www.mageplaza.com/)
+ * @license     http://mageplaza.com/LICENSE.txt
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <update handle="editor"/>
     <body>
         <referenceContainer name="page.main.actions">
-            <block class="Mageplaza\Seo\Block\Adminhtml\SeoChecker\Check" name="seo-checker" after="-">
-
-            </block>
+            <block class="Mageplaza\Seo\Block\Adminhtml\SeoChecker\Check" name="seo-checker" after="-" />
         </referenceContainer>
     </body>
 </page>
