--- a/view/adminhtml/layout/catalog_product_edit.xml
+++ b/view/adminhtml/layout/catalog_product_edit.xml
@@ -5,7 +5,7 @@
  *
  * NOTICE OF LICENSE
  *
- * This source file is subject to the mageplaza.com license that is
+ * This source file is subject to the Mageplaza.com license that is
  * available through the world-wide-web at this URL:
  * https://mageplaza.com/LICENSE.txt
  *
