--- a/view/adminhtml/layout/cms_page_edit.xml
+++ b/view/adminhtml/layout/cms_page_edit.xml
@@ -16,7 +16,7 @@
  *
  * @category    Mageplaza
  * @package     Mageplaza_Seo
- * @copyright   Copyright (c) 2018 Mageplaza (https://www.mageplaza.com/)
+ * @copyright   Copyright (c) Mageplaza (https://www.mageplaza.com/)
  * @license     http://mageplaza.com/LICENSE.txt
  */
 -->
