--- a/view/adminhtml/templates/seocheck.phtml
+++ b/view/adminhtml/templates/seocheck.phtml
@@ -20,6 +20,6 @@
  */
 ?>
 
-<form id="mageplaza-seo-form" target="_blank" method="post" action="<?php echo $block->getSeoToolUrl() ?>">
-    <input title="" type="hidden" name="mageplazaSeoData" value='<?php echo $block->getSeoData(); ?>'>
+<form id="mageplaza-seo-form" target="_blank" method="post" action="<?= $block->getSeoToolUrl() ?>">
+    <input title="" type="hidden" name="mageplazaSeoData" value='<?= $block->getSeoData() ?>'>
 </form>
